--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
     # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:PORT/DB
-spring.datasource.username=USERNAME
-spring.datasource.password=PASSWORD
+spring.datasource.url=jdbc:postgresql://localhost:5432/TestForMalam
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
